--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -23,7 +23,7 @@
         top: 4.5rem;
         right: 4.5rem;
         z-index: 1000;
-        transition: .8s;
+        transition: .3s;
     }
 
     &__nav-icon{
@@ -79,6 +79,14 @@
         transition: .2s;
         width: 100%;
     }
+    &__list{
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 2000;
+        visibility: hidden;
+    }
 
     &__input:checked ~ &__background{
         transform: scale(70);
@@ -89,19 +97,17 @@
         width: 100%;
     }
 
+    &__input:checked ~ &__nav &__list{
+        visibility: visible;
+    }
+
     &__input{
         display: none;
     }
 
 
  
-    &__list{
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        z-index: 2000;
-    }
+ 
     &__item{
         list-style-type: none;
         background-image: linear-gradient(115deg, transparent 0%, transparent 50%, $color-white 50%);
